# extron-legacy

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_ci.yml
assets/app_resource/: resource.rc  windows.aps
cmake/: qt.cmake  sources.cmake  tinyxml.cmake
include/extron_core/: data.h  data_description.h  data_history.h  extron_data.h
include/extron_ui_qt/: clickable_label.h  format.h  tab_overview.h  tab_overview.ui  tab_workout.h  tab_workout.ui  window.h  window.ui
src/extron/: CMakeLists.txt
src/extron_core/: CMakeLists.txt  data.cpp  data_description.cpp  data_history.cpp
src/extron_ui_qt/: CMakeLists.txt  clickable_label.cpp  format.cpp  main.cpp  tab_overview.cpp  tab_workout.cpp  window.cpp
src/version/: CMakeLists.txt
